# study

./: .gitignore  Rakefile
buontempo-learn_cpp_by_example/work/const/: build.ninja  const.cpp
buontempo-learn_cpp_by_example/work/decltype/: build.ninja  decltype.cpp
buontempo-learn_cpp_by_example/work/functional/: build.ninja  plus.cpp
buontempo-learn_cpp_by_example/work/hello_world/: build.ninja  hello_world.cpp
buontempo-learn_cpp_by_example/work/pascal_triangle/: build.ninja  triangle.cpp
buontempo-learn_cpp_by_example/work/typeid/: build.ninja  typeid.cpp
gregoire-professinal_cpp/Work/args/: args
gregoire-professinal_cpp/Work/basics-operators/: sample  sample.cpp
gregoire-professinal_cpp/Work/bindings/: main
gregoire-professinal_cpp/Work/classes/: main
gregoire-professinal_cpp/Work/enum-types/: enum-types  enum-types.cpp
gregoire-professinal_cpp/Work/format/: format  format.cpp
gregoire-professinal_cpp/Work/goto/: main  main-clang  main.cpp
gregoire-professinal_cpp/Work/initializer_lists/: main  main.cpp
gregoire-professinal_cpp/Work/memory/: main  main.ll  main.s
gregoire-professinal_cpp/Work/modules/: hello.cppm
gregoire-professinal_cpp/Work/namespaces/: main.cpp  unnamed_ns-main  unnamed_ns-main.cpp
gregoire-professinal_cpp/Work/optional/: main
gregoire-professinal_cpp/Work/scopes/: main  main.cpp
gregoire-professinal_cpp/Work/static_cast/: main
gregoire-professinal_cpp/Work/strings/: main
gregoire-professinal_cpp/Work/structs/: main
gregoire-professional_cpp/work/args/: args.cpp
gregoire-professional_cpp/work/bindings/: main.cpp
gregoire-professional_cpp/work/classes/: main.cpp
gregoire-professional_cpp/work/initializer_lists/doc/: initializer_lists.mdj
gregoire-professional_cpp/work/memory/: main.cpp
gregoire-professional_cpp/work/modules/: main.cpp
gregoire-professional_cpp/work/optional/: main.cpp
gregoire-professional_cpp/work/static_cast/: main.cpp
gregoire-professional_cpp/work/strings/: main.cpp
gregoire-professional_cpp/work/structs/: employee.hh  main.cpp
qt-extending_qml/extending-qml-my/pie_chart/source/: CMakeLists.txt  Dockerfile-alpine  Dockerfile-arch  main.cpp  pie_chart.cpp  pie_chart.hpp
qt-extending_qml/extending-qml-my/pie_chart/source/views/: Main.qml
qt-extending_qml/work/chapter1-basics/source/: CMakeLists.txt
scott-professional-cmake/work/a_minimal_project/source/: CMakeLists.txt  main.cpp
scott-professional-cmake/work/link_libraries/source/: CMakeLists.txt  main.cpp  one.cpp  two.cpp
scott-professional-cmake/work/link_libraries/source/include/: one.hpp  two.hpp
scott-professional-cmake/work/packaging/package/lib/cmake/: LoggerConfig.cmake
scott-professional-cmake/work/packaging/package/source/: CMakeLists.txt
scott-professional-cmake/work/packaging/package/source/include/: logger.hpp
scott-professional-cmake/work/packaging/project/source/: CMakeLists.txt  main.cpp
scott-professional-cmake/work/samples/source/: CMakeLists.txt  main.cpp
scott-professional-cmake/work/samples/source/cmake/: 01-setting_and_getting_an_environment_variable.cmake  02-setting_and_getting_a_cache_variable.cmake  03-outputting_colour_messages.cmake
scott-professional-cmake/work/variables/source/: CMakeLists.txt  logger.cpp  main.cpp
scott-professional-cmake/work/variables/source/cmake/: messages.cmake  output.cmake
sherriff-learn_qt5/cm/: Makefile  cm.pro  run
sherriff-learn_qt5/cm-02/: Makefile  README.md  cm.pro  run
sherriff-learn_qt5/cm-02/cm-lib/: Makefile  cm-lib.pro
sherriff-learn_qt5/cm-02/cm-lib/_build/: libcm-lib.so.1.0.0
sherriff-learn_qt5/cm-02/cm-tests/: Makefile  cm-tests.pro
sherriff-learn_qt5/cm-02/cm-ui/: Makefile  cm-ui.pro  views.qrc
sherriff-learn_qt5/cm-02/cm-ui/_build/: cm-ui
sherriff-learn_qt5/cm-02/cm-ui/source/: main.cpp
sherriff-learn_qt5/cm-02/cm-ui/views/: MasterView.qml
sherriff-learn_qt5/cm/cm-lib/: Makefile  cm-lib.pro
sherriff-learn_qt5/cm/cm-lib/_build/: libcm-lib.so.1.0.0
sherriff-learn_qt5/cm/cm-lib/source/: cm-lib_global.h
sherriff-learn_qt5/cm/cm-lib/source/controllers/: master-controller.cpp  master-controller.h
sherriff-learn_qt5/cm/cm-lib/source/models/: client.cpp  client.h
sherriff-learn_qt5/cm/cm-tests/: Makefile  cm-tests.pro
sherriff-learn_qt5/cm/cm-tests/_build/: client-tests
sherriff-learn_qt5/cm/cm-tests/source/models/: client-tests.cpp
sherriff-learn_qt5/cm/cm-ui/: Makefile  cm-ui.pro  views.qrc
sherriff-learn_qt5/cm/cm-ui/_build/: cm-ui
sherriff-learn_qt5/cm/cm-ui/source/: main.cpp
sherriff-learn_qt5/cm/cm-ui/views/: MasterView.qml
